20181011		6.2.1
	- Fix bug in USB disk interface with disks over 4GB

20180926        6.2.0
	- Fix bug with non-512 byte sectors.
	- Fix bug when writing with multiple SCSI devices on the chain
	- Performance improvements to write speeds.

20180430		6.1.4
	- Fix bug in self-test function

20180131		6.1.3
	- Fix bug that caused stability issues with 10MB/s transfers.

20171128		6.1.2
	- Fix synchronous negotiation bugs

20170520		6.1.1
	- Performance improvements to improve throughput at all scsi speeds
	- Add new "turbo" speed option to boost speeds.
		- May not be reliable, and use is not supported.
		- Async timings trimmed
		- Sync speeds boosted to theoretical 15.625MB/s, with 12.0MB/s measured
		read througput.
		- SD card put in "high speed" mode.
		- USB for configuration/firmware updates is disabled in turbo mode when
		processing SCSI commands. A power cycle may be required to connect
		via USB to reset the 48MHz clock back to 48MHz.
	- Fix scsi2sd-util6 size and sector-size inputs
	- Fix crash when configured scsi disk starting sector is less than
	SD card size

20170329		6.1.0
	- Enable synchronous transfers on SCSI1 hosts
	- Support 4MB/s sync transfers for Amiga A590 (WD33C93)
	- Merge v4.7 release changes, excluding custom mode/inquiry pages
	- various bug fixes

20161006		6.0.13
	- Fixed SCSI timing issue
	- Added glitch filter on SCSI signals.
	- Re-implemented SCSI parity checking.

20160912		6.0.10
	- Fixed write issue with UHS-I Speed Class 3 SD cards.
	- More stability bug fixes

20160827		6.0.8
	- Fixed "protocol error" issues when saving configuration to SD cards.
	- Synchronous transfers supported ! 5MB/s and 10MB/s supported.
	- Fix for accessing data via USB with more than 2 devices configured.

20160815		6.0.6
	- Fix performance bugs

20160814		6.05
	- More SCSI bug fixes (some timing issues resolved in the FPGA image)
	- Firmware update support using scsi2sd-util6.

20160716		6.03 (BETA3)
	- SCSI bug fixes.

20160616		6.01