@@ -78,9 +78,10 @@ typedef enum
 
 typedef enum
 {
-	S2S_CFG_QUIRKS_NONE,
-	S2S_CFG_QUIRKS_APPLE,
-	S2S_CFG_QUIRKS_OMTI
+	S2S_CFG_QUIRKS_NONE = 0,
+	S2S_CFG_QUIRKS_APPLE = 1,
+	S2S_CFG_QUIRKS_OMTI = 2,
+	S2S_CFG_QUIRKS_XEBEC = 4
 } S2S_CFG_QUIRKS;
 
 typedef enum
